# regular

./: .gitignore  Cargo.toml  Makefile  README.md  dev-requirements.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  python-ci.yml  rust-ci.yml
profile/: README.md  profiler.py
src/: lib.rs
tests/: test_compile.py  test_exceptions.py  test_object_private_api.py  test_object_public_api.py  test_regularexpression_methods.py
