[package]
name = "regular"
version = "0.1.0"
authors = ["Chris Simpkins <git.simpkins@gmail.com>"]
edition = "2018"
keywords    = ["regex", "regularexpression", "match", "search", "replace"]
license     = "Apache-2.0"
readme      = "README.md"
repository  = "https://github.com/chrissimpkins/regular"

[lib]
name = "regular"
crate-type = ["cdylib"]

[dependencies]
regex = "1.4.2"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]