[tool.poetry]
name = "regular"
version = "0.1.0"
description = "A Python wrapper for the Rust regex regular expression library"
authors = ["Chris Simpkins <git.simpkins@gmail.com>"]
keywords = ["regex", "regularexpression", "text", "match", "search", "replace", "split", "rust"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/chrissimpkins/regular"
homepage = "https://github.com/chrissimpkins/regular"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
wheel = "*"
maturin = "==0.12.6"